[project]
name = "lane-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Elior Malul",email = "elior@orcavision.company"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.15.2,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "lane_detection", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
